--- a/WinPass11.GuidedInstaller/WinPass11.GuidedInstaller.csproj
+++ b/WinPass11.GuidedInstaller/WinPass11.GuidedInstaller.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{BEA4499E-AE4B-4D21-AF32-C8136E77D3C2}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>winPass11_guided_install</RootNamespace>
-    <AssemblyName>winPass11-guided-install</AssemblyName>
+    <AssemblyName>WinPass11.GuidedInstaller</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -52,7 +52,7 @@
     <ManifestCertificateThumbprint>43C35128942E61B3E6B67F65A8555EE6F60C8507</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>winPass11-guided-install_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>WinPass11.GuidedInstaller_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>false</GenerateManifests>
