--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,3 @@
 # These are supported funding model platforms
 
-github: # GameBoyYeet
-custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+github: GameBoyYeet
