--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-github: GameBoyYeet, ProgrammerIn-wonderland
+github: GameBoyYeet, ProgrammerIn-wonderland, 08-k
