--- a/WinPass11.GuidedInstaller/WinPass11.GuidedInstaller.csproj
+++ b/WinPass11.GuidedInstaller/WinPass11.GuidedInstaller.csproj
@@ -105,6 +105,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppraiserresHandler.cs" />
     <Compile Include="Utils\Constants.cs" />
     <Compile Include="Utils\Data.cs" />
     <Compile Include="Form.cs">
