--- a/WinPass11.GuidedInstaller/WinPass11.GuidedInstaller.csproj
+++ b/WinPass11.GuidedInstaller/WinPass11.GuidedInstaller.csproj
@@ -105,8 +105,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Utils\Constants.cs" />
-    <Compile Include="Utils\Data.cs" />
+    <Compile Include="Helpers\Constants.cs" />
     <Compile Include="Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,8 +114,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\Strings.cs" />
-    <Compile Include="Utils\Utils.cs" />
+    <Compile Include="Helpers\Strings.cs" />
+    <Compile Include="Helpers\Utils.cs" />
     <EmbeddedResource Include="Form.resx">
       <DependentUpon>Form.cs</DependentUpon>
     </EmbeddedResource>
